# vuanem-marketing-mysql

./: .gitignore  Pipfile  README.md  broadcast.py  main.py  models.py  pyproject.toml  requirements.txt  test_requests.py
.github/workflows/: cloud-functions.yaml  main.yaml
configs/: CallLogs.json  Orders.json  c2c_CaresoftCallLogs.json  c2l_SalesCall.json
controller/: pipelines.py
db/: bigquery.py  mysql.py
libs/: bigquery.py  mysql.py
marketing/: config.py  connection.py  pipeline_controller.py  pipeline_service.py
marketing/pipeline/: __init__.py  interface.py  orders.py  sales_call.py  sales_call_2.py  sales_call_3.py  utils.py
models/: engine.py
models/Ecommerce/: Orders.py  SalesCall.py  SalesCall2.py  base.py
pipeline/: pipeline_const.py  pipeline_service.py  test_pipeline_service.py
queries/: CallLogs.sql  Orders.sql  SalesCall.sql
schemas/: CallLogs.json  c2c_CaresoftCallLogs.json  c2l_SalesCall.json
secret_manager/: __init__.py
test/: test_broadcast.py  test_units.py  utils.py
