[tool.poetry]
name = "vuanem_mysql"
version = "2.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^2.30.1"
requests = "^2.26.0"
SQLAlchemy = "^1.4.27"
PyMySQL = "^1.0.2"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-timeout = "^2.0.1"
black = "^21.11b1"
types-requests = "^2.26.0"
mypy = "^0.910"
types-pytz = "^2021.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
