[tool.poetry]
name = "vuanem-marketing-mysql"
version = "3.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^2.30.1"
PyMySQL = "^1.0.2"
pytz = "^2021.3"
compose = "^1.2.8"
sshtunnel = "^0.4.0"
google-cloud-secret-manager = "^2.16.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
mypy = "^0.910"
types-pytz = "^2021.3.0"
types-PyMySQL = "^1.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
