[tool.poetry]
name = "vuanem-marketing-mysql"
version = "4.0.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^3.10.0"
PyMySQL = "^1.0.3"
sshtunnel = "^0.4.0"
google-cloud-secret-manager = "^2.16.1"
compose = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.2.0"
types-PyMySQL = "^1.0.19.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
